# solana-signal-trader

./: .env.example  .gitignore  Makefile  README.md  analyze_channel.py  debug_backtest.py  generate_session_string.py  pyproject.toml  requirements.txt  run.py  run_deepseek_loop.sh  strategy_config.json  summary.py  test_deepseek_api.py
.do/: app.yaml
.github/workflows/: ci.yml
scripts/: analyze_channel.py  analyze_filters.py  ask_agent.py  backfill_snapshots.py  backtest_chart.py  backtest_managed_strategy.py  backtest_open_ai_managed.py  check_quick_pop_ml.py  check_shadow_override.py  daily_report.py  debug_ml.py  debug_moonbag_ml.py  debug_ohlcv_empty.py  debug_quick_pop_ml.py  dump_channel.py  fix_backfill_timestamps.py  optimize_all.sh  optimize_filters.py  optimize_ml_weights.py  optimize_tp_sl.py  price_history.py  run_agents.py  run_anthropic_manager.py  run_deepseek_manager.py  run_openai_manager.py  skips.py  summary.py  test_ai_override.py  test_apis.py  test_ml_mock.py  test_ml_scorer.py  trades.py  tune_strategies.py
services/: rest_client.py
solana_api/: RestClientHelper.py  my_bot_script.py
tests/: test_agent_tuner.py  test_ai_override.py  test_birdeye.py  test_chart.py  test_db_queries.py  test_managed_strategy_infra.py  test_ml_scorer.py  test_open_ai_managed.py  test_parser.py  test_run_openai_manager.py  test_skipped_signal_tracking.py  test_strategy.py
trader/: __init__.py  config.py
trader/agents/: __init__.py  ai_override.py  anthropic_manager.py  base.py  deepseek_manager.py  exit_tuner.py  managed_agent_base.py  openai_manager.py  (+4 more)
(+16 files in other folders)
